<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameString"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textFontWeight="@integer/material_motion_duration_long_2"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:text="@string/aString"
                android:textFontWeight="@integer/material_motion_duration_long_1"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edtNumberA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHighlight="#7cff88"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/bString"
                android:textFontWeight="@integer/material_motion_duration_long_1"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edtNumberB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHighlight="#7cff88" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:text="@string/resultString"
                android:textFontWeight="@integer/material_motion_duration_long_1"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edtResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHighlight="#7cff88"
                android:editable="false"
                tools:ignore="Deprecated" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnPlusString"
                android:layout_margin="7sp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnSubtractString"
                android:layout_margin="7sp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/btnMutiple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnMutipleString"
                android:layout_margin="7sp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/btnDivine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnDivisionString"
                android:layout_margin="7sp"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>